break words in intro (to prevent horizontal scrolling in case of big links)

--- a/ddoc/app/style.less
+++ b/ddoc/app/style.less
@@ -76,7 +76,7 @@ nav {
     }
     &:hover, &.no-foto:hover {
       max-height: 480px;
-      .intro { max-height: 178px; overflow: auto; } 
+      .intro { max-height: 178px; overflow: auto; word-break: break-all; } 
     }
     transition: max-height 0.8s;
     -webkit-transition: max-height 0.8s;
